# bs2

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
circuits/: Cargo.toml
circuits/src/: lib.rs  main_circuit.rs  root.rs
circuits/src/execution_table/: mod.rs
circuits/src/execution_table/op_configure/: btype.rs  itype.rs  jtype.rs  mod.rs  others.rs  rtype.rs  stype.rs  utype.rs
circuits/src/memory_table/: mod.rs
cli/: Cargo.toml
cli/src/: command.rs  main.rs
cli/src/exec/: run.rs
entry_builder/: Cargo.toml  trace.json
entry_builder/src/: builder.rs  entries.rs  lib.rs  op_step.rs  register.rs  rw_container.rs
entry_builder/src/opcodes/: btype.rs  mod.rs  rtype.rs
halo2_gadgets/benches/: poseidon.rs
halo2_gadgets/src/ecc/chip/: add.rs
halo2_gadgets/src/sha256/table16/: compression.rs  spread_table.rs
halo2_gadgets/src/sha256/table16/compression/: compression_gates.rs  compression_util.rs
halo2_gadgets/src/sha256/table16/message_schedule/: schedule_gates.rs  subregion1.rs  subregion2.rs  subregion3.rs
halo2_gadgets/src/utilities/: cond_swap.rs
halo2_proofs/examples/: circuit-layout.rs  shuffle.rs
halo2_proofs/src/: plonk.rs
halo2_proofs/src/dev/graph/: layout.rs
halo2_proofs/src/plonk/: circuit.rs  keygen.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/poly/: multiopen_test.rs
halo2_proofs/src/transcript/: poseidon.rs
halo2_proofs/tests/: plonk_api.rs
halo2curves/src/bn256/: fr.rs
halo2curves/src/tests/: field.rs
runtime/: Cargo.toml
runtime/src/: left  lib.rs  right  trace.rs
verifier/: Cargo.toml
verifier/src/: main.rs
