[workspace]
members = ["cli"]

[patch.crates-io]
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "develop" }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
halo2curves = { git = "https://github.com/scroll-tech/halo2curves.git", branch = "0.3.1-derive-serde" }

[workspace.dependencies]
rand = "0.8"
primitive-types = "0.12"
lazy_static = "1.4"
