[package]
name = "bs2-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
log = "0.4.14"
rand_core = "0.6.4"
rand_xorshift = "0.3"
hex = "0.4.3"
clap = { version = "=4.2.1", features = ["derive", "env"] }
anyhow = "1.0"
chrono = "0.4.23"
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_02_02" }

runtime = { path = "../runtime" }
entry_builder = { path = "../entry_builder" }
circuits = { path = "../circuits" }


[features]
super = []
