[package]
name = "entry_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.14"
rand_core = "0.6.4"
rand_xorshift = "0.3"
hex = "0.4.3"
anyhow = "1.0"
chrono = "0.4.23"
serde_json = "1.0.66"

runtime = { path = "../runtime" }
byteorder = "1.5.0"
hashbrown = "0.14.3"

[features]
super = []
